# uvicorn-gunicorn-docker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  test.yml
docker-images/: gunicorn_conf.py  python3.9-slim.dockerfile  python3.9.dockerfile  start-reload.sh  start.sh
docker-images/app/: main.py
scripts/: build-push.sh  build.sh  deploy.sh  process_all.py
tests/: utils.py
tests/test_01_main/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py  test_env_vars_3.py
tests/test_02_app/: test_custom_app.py  test_package_app.py  test_package_app_config.py  test_package_app_custom_config.py  test_package_app_sub_config.py  test_simple_app.py
tests/test_02_app/custom_app/app/custom_app/: custom_main.py
tests/test_02_app/package_app_sub_config/app/app/: gunicorn_conf.py  main.py
tests/test_03_reload/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py
tests/test_04_app_reload/: test_custom_app.py  test_package_app.py  test_simple_app.py
